--- a/package.json
+++ b/package.json
@@ -24,16 +24,31 @@
   },
   "homepage": "https://github.com/HectorBlisS/react-starterkit#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "colors": "^1.1.2",
-    "express": "^4.15.2",
-    "npm-run-all": "^4.0.2",
+    "babel-cli": "6.24.0",
+    "babel-core": "6.24.0",
+    "babel-loader": "6.4.1",
+    "babel-preset-es2015": "6.24.0",
+    "babel-preset-react": "6.23.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "bootstrap": "^3.3.7",
+    "colors": "1.1.2",
+    "css-loader": "0.28.0",
+    "express": "4.15.2",
+    "file-loader": "^0.11.1",
+    "npm-run-all": "4.0.2",
     "open": "0.0.5",
-    "path": "^0.12.7"
+    "path": "0.12.7",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "2.8.1",
+    "style-loader": "0.16.1",
+    "toastr": "^2.1.2",
+    "url-loader": "^0.5.8",
+    "webpack": "1.13.1",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^3.3.7"
+  }
 }
