--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "lint:watch": "npm run lint -- --watch",
     "generate-mock-data": "babel-node tools/generateMockData",
     "prestart-mockapi": "npm run generate-mock-data",
-    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist lint",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js"
   },
   "repository": {
     "type": "git",
@@ -58,6 +62,7 @@
     "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "react-typeform": "^0.1.1"
   }
 }
