--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "url-loader": "^0.5.8",
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0"
+    "webpack-hot-middleware": "2.10.0",
+    "html-webpack-plugin": "2.28.0",
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "react-typeform": "^0.1.1"
+    "bootstrap": "^3.3.7"
   }
 }
