--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0",
-    "html-webpack-plugin": "2.28.0",
+    "html-webpack-plugin": "2.28.0"
   },
   "dependencies": {
     "bootstrap": "^3.3.7"
