--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "eslint-plugin-react": "5.0.1",
     "eslint-watch": "2.1.11",
     "express": "4.15.2",
+    "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "2.28.0",
     "npm-run-all": "4.0.2",
     "open": "0.0.5",
     "path": "0.12.7",
@@ -60,7 +62,10 @@
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0",
-    "html-webpack-plugin": "2.28.0"
+    "webpack-md5-hash": "0.0.5",
+    "compression": "1.6.2",
+    "json-schema-faker": "0.3.6",
+    "rimraf": "2.5.4"
   },
   "dependencies": {
     "bootstrap": "^3.3.7"
